--- a/packet/src/secretsharing.tex
+++ b/packet/src/secretsharing.tex
@@ -45,7 +45,7 @@ Here is a simple scheme for sharing integers using nothing but addition and subt
 
 Let's go through the notation together. First, in the left column, we can see that 
 we are defining an algorithm called $\share$. (An \emph{algorithm} is simply a procedure.)
-The parentheses after the algorithm name tell us that it takes as input a value $s$, which in 
+The parentheses after the algorithm's name tell us that it takes as input a value $s$, which in 
 this context is the secret to be shared. The first line of the algorithm tells us to sample
 a uniform element\footnotemark~ from the set $\{0, \ldots, 2^\lambda-1\}$ and call it $s_1$. 
 (The dots in the set are shorthand for all the numbers in between 0 and $2^\lambda-1$.) For instance, 
@@ -161,7 +161,7 @@ and \ref{sec:proof}.
     algorithm?
 \end{exercise}
 
-\subsection[Formal Definitions*]{Formal Definitions\astfootnote{optional section}}\label{sec:formal-defs}
+\subsection{Formal Definitions}\label{sec:formal-defs}
 
 We'll now formally define what a secret sharing scheme is and the 
 properties such a scheme might have, using the standard notation in 
@@ -182,9 +182,11 @@ of achieving the same thing, after all).
         shares in $\D_s$.
         \item \rec~takes as input $m$ shares $s_1, \ldots, s_m \in D_s$ 
         and outputs some value $y \in \D$ or a special symbol $\perp$ 
-        indicating failure. (If $m \neq n$, it outputs $\perp$.)
+        indicating failure. (If $m \neq n$, it outputs $\perp$.\footnotemark)
     \end{itemize}
 \end{definition}
+\footnotetext{This statement ensures that if we try to reconstruct without all $n$ shares, we are guaranteed to fail: it is impossible to reconstruct without all the shares.}
+
 % from Input Auth paper
 % \begin{definition}[secret-sharing scheme]
 %     A pair of polynomial-time algorithms $\Sigma = (\share, \recon)$ is a (two-party) secret-sharing scheme if
@@ -353,7 +355,7 @@ by observing that $\rec(\share(s)) = \rec(s_1, s-s_1) = s_1 +
 
 Now that we understand correctness, let's look at privacy.
 
-\subsubsection{Privacy}
+\subsubsection[Privacy*]{Privacy\astfootnote{optional section}}
 
 In cryptography, security properties like privacy are defined using what 
 are called ``games''. A game is a challenge in which an attacker (called 
@@ -378,7 +380,7 @@ wishes and get into the safe herself to steal Alice's money.
 Let's think about the worst case, in which Eve is very powerful: she knows 
 that the safe is locked with equal probability by one of two combinations
 $x_0$ or $x_1$; even worse, she was able to decide these two possible combinations herself by 
-somehow influencing Alice as she chose her combination; and she's even 
+somehow influencing Alice as she chose her combination; and she's
 even managed to figure out how to peek at some of the other friends' shares
 (in the worst case all but one of them, which means she knows the values of $n-1$ shares including her own).
 Once Alice has shared her
