--- a/packet/src/shamir.tex
+++ b/packet/src/shamir.tex
@@ -141,8 +141,8 @@ You've probably learned that two points uniquely define a line:
 \end{tikzpicture}
 \end{center}
 
-In fact, we can view a line as a degree-1 polynomial, so we can uniquely 
-define it via a set of points!
+In fact, we can view the equation for a (non-vertical) line as a degree-1 polynomial, so we can uniquely 
+define the line via a set of points!
 Instead of giving someone the equation for this line, you could 
 give them 2 points on the line (for example, $(1,1)$ and $(3,5)$) and they'd 
 still know exactly what line you're talking about. 
@@ -218,7 +218,7 @@ How many points do you think are needed to uniquely define a degree-$n$
 polynomial? Once you think you have an answer, flip to the next page.
 
 \newpage
-The process of recovering a polynomial passing through a set of points is 
+The process of recovering a polynomial passing through a given set of points is 
 called \emph{interpolation}. Accordingly, this general rule about the 
 uniqueness of a polynomial described by a set of points is called the 
 interpolation theorem:
@@ -238,6 +238,35 @@ interpolation theorem:
 \begin{exercise}
     How many points are needed to uniquely define each polynomial 
     in the previous exercise?
+\end{exercise}
+
+\begin{exercise}
+    Do the following points define a unique degree-1 polynomial (line)? Write ``yes'' or ``no''. To help, you can use the grid below to plot the points.
+    \renewcommand{\labelenumi}{(\alph{enumi})} 
+    \begin{enumerate}
+        \item $(3,2)$
+        \item $(0,0), (2,2)$
+        \item $(1,3), (3,4), (4,5)$
+        \item $(-1,1), (0,3), (2,7)$
+    \end{enumerate}
+
+    \begin{center}
+    \begin{tikzpicture}
+    \begin{axis}[
+        axis x line=center,
+        xlabel={$x$},
+        axis y line=center,
+        ylabel={$y$},
+        xmin=-1.5,
+        xmax=5.5,
+        ymin=-1.5,
+        ymax=8.5,
+        grid,
+        % ytick={0,...,8},
+    ]
+    \end{axis}
+    \end{tikzpicture}
+    \end{center}
 \end{exercise}
 
 If getting from a set of points to an equation sounds difficult, don't worry because 
@@ -295,7 +324,7 @@ So, $\sum_{i=1}^{4} i = 1+2+3+4 = 10$ and $\prod_{i=1}^4 i = 1 \cdot 2 \cdot 3
 \end{bonus}
 
 Now, back to Lagrange interpolation. We start with a set of points $(x_0, y_0), 
-\ldots,\allowbreak (x_n, y_n)$. For each point $(x_i, y_i)$, we compute the 
+\ldots,\allowbreak (x_m, y_m)$. For each point $(x_i, y_i)$, we compute the 
 expression $\ell_i(x)$. For instance, for $i=2$, it will be of the form
 
 \newcommand{\cyan}[1]{\textcolor{cyan}{#1}}
@@ -522,8 +551,8 @@ you could have a go at it! You can find it online at
 
 To share a secret $s$ in $\D$, we choose a random 
 degree-$t$ polynomial $f$ by sampling $t$ random coefficients and 
-setting $f$'s $y$-intercept to the secret. Then we pick $n$ points 
-on $f$ (the convention is to evaluate $f$ at 1, 2, and so on, up 
+setting $f$'s $y$-intercept to the secret. Then we evaluate $f$ at $n$ points 
+(the convention is to evaluate $f$ at 1, 2, and so on, up 
 to $n$)\footnotemark. These $n$ points are the shares.
 \footnotetext{To be exact, Shamir's secret sharing evaluates $f$ 
 in a way that ensures the values $f(x_i)$ are elements of something 
