add b&w versions; cleanup

--- a/packet/answers.tex
+++ b/packet/answers.tex
@@ -1,5 +1,9 @@
 \documentclass[12 pt]{article}
+\newif\ifbw
+\bwfalse
+
 \hbadness=10
+
 \input{src/header.tex}
 
 \def\share{\ensuremath{\mathsf{Share}}}
