--- a/packet/main.tex
+++ b/packet/main.tex
@@ -1,5 +1,9 @@
 \documentclass[12 pt]{article}
-\hbadness=10
+\newif\ifbw
+\bwfalse
+
+\hbadness=200
+
 \input{src/header.tex}
 
 %%% Title and Abstract
