--- a/packet/ans/shamir.tex
+++ b/packet/ans/shamir.tex
@@ -44,8 +44,31 @@
         ymax=8.5,
         grid,
     ]
+        \ifbw
+        %%% BLACK-AND-WHITE VERSION %%%
         % part a
-        \node [magenta] (point-a1) at (axis cs: 3,2) {\textbullet};
+        \node (point-a1) at (axis cs: 3,2) {$\star$};
+        \addplot[domain=-1.5:5.5,samples=50,mark=none,dashed]{-2*x+8};
+        \addplot[domain=-1.5:5.5,samples=50,mark=none,dashed]{.33*x+1};
+        % part b
+        \node (point-b1) at (axis cs: 0,0) {$\diamond$};
+        \node (point-b2) at (axis cs: 2,2) {$\diamond$};
+        \addplot[domain=-1.5:5.5,samples=50,mark=none,densely dotted]{x};
+        % part c
+        \node (point-c1) at (axis cs: 1,3) {$\times$};
+        \node (point-c2) at (axis cs: 3,4) {$\times$};
+        \node (point-c3) at (axis cs: 4,5) {$\times$};
+        \addplot[domain=-1.5:5.5,samples=50,mark=none,dashdotted]{.5*x+2.5};
+        \addplot[domain=-1.5:5.5,samples=50,mark=none,dashdotted]{x+1};
+        % part d
+        \node (point-d1) at (axis cs: -1,1) {\textbullet};
+        \node (point-d2) at (axis cs: 0,3) {\textbullet};
+        \node (point-d3) at (axis cs: 2,7) {\textbullet};
+        \addplot[domain=-1.5:5.5,samples=50,mark=none,thick]{2*x+3};
+        \else
+        %%% COLOR VERSION %%%
+        % part a
+        \node (point-a1) [magenta] at (axis cs: 3,2) {\textbullet};
         \addplot[domain=-1.5:5.5,samples=50,mark=none,magenta,dashed]{-2*x+8};
         \addplot[domain=-1.5:5.5,samples=50,mark=none,magenta,dashed]{.33*x+1};
         % part b
@@ -53,26 +76,32 @@
         \node [cyan] (point-b2) at (axis cs: 2,2) {\textbullet};
         \addplot[domain=-1.5:5.5,samples=50,mark=none,cyan,thick]{x};
         % part c
-        \node [green] (point-c1) at (axis cs: 1,3) {\textbullet};
-        \node [green] (point-c2) at (axis cs: 3,4) {\textbullet};
-        \node [green] (point-c3) at (axis cs: 4,5) {\textbullet};
-        \addplot[domain=-1.5:5.5,samples=50,mark=none,green,dashed]{.5*x+2.5};
-        \addplot[domain=-1.5:5.5,samples=50,mark=none,green,dashed]{x+1};
+        \node [orange] (point-c1) at (axis cs: 1,3) {\textbullet};
+        \node [orange] (point-c2) at (axis cs: 3,4) {\textbullet};
+        \node [orange] (point-c3) at (axis cs: 4,5) {\textbullet};
+        \addplot[domain=-1.5:5.5,samples=50,mark=none,orange,dashed]{.5*x+2.5};
+        \addplot[domain=-1.5:5.5,samples=50,mark=none,orange,dashed]{x+1};
         % part d
         \node (point-d1) at (axis cs: -1,1) {\textbullet};
         \node (point-d2) at (axis cs: 0,3) {\textbullet};
         \node (point-d3) at (axis cs: 2,7) {\textbullet};
         \addplot[domain=-1.5:5.5,samples=50,mark=none,thick]{2*x+3};
+        \fi
     \end{axis}
+    % labels
+    \node [below,font=\small,\ifbw\else magenta\fi] at (point-a1) {(a)};
+    \node [font=\small,\ifbw\else cyan\fi] at (5.2,2.7) {(b)};
+    \node [above left,font=\small,\ifbw\else orange\fi] at (point-c2) {(c)};
+    \node [font=\small] at (4.2,6) {(d)};
     \end{tikzpicture}
     \end{center}
 
     \renewcommand{\labelenumi}{(\alph{enumi})} 
     \begin{enumerate}
-        \item No; there are not enough points to define a \emph{unique} degree-1 polynomial, and in fact there are infinitely many degree-1 polynomials passing through this point. (In \textcolor{magenta}{pink} above.)
-        \item Yes; these points uniquely define the polynomial $f(x) = x$. (In \textcolor{cyan}{light blue} above.)
-        \item No; there is no degree-1 polynomial passing through these points because they are not properly aligned. However, they do define a unique degree-2 polynomial. (In \textcolor{green}{green} above.)
-        \item Yes; these points uniquely define the polynomial $f(x) = 2x + 3$. (In black above.)
+        \item No; there are not enough points to define a \emph{unique} degree-1 polynomial, and in fact there are infinitely many degree-1 polynomials passing through this point. \ifbw($\star$ above.)\else(In \textcolor{magenta}{pink} above.)\fi
+        \item Yes; these points uniquely define the polynomial $f(x) = x$. \ifbw($\diamond$ above.)\else(In \textcolor{cyan}{light blue} above.)\fi
+        \item No; there is no degree-1 polynomial passing through these points because they are not properly aligned. However, they do define a unique degree-2 polynomial. \ifbw($\times$ above.)\else(In \textcolor{orange}{orange} above.)\fi
+        \item Yes; these points uniquely define the polynomial $f(x) = 2x + 3$. \ifbw(\textbullet\ above.)\else(In black above.)\fi
     \end{enumerate}
 \end{answer}
 
